--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
+<!DOCTYPE html>
 <html class="light" lang="ja">
 
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Executive English Coaching | Premium</title>
+    <title>エグゼクティブ英語コーチング | 実務特化プログラム</title>
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link
         href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700;900&amp;family=Inter:wght@300;400;500;700&amp;display=swap"
@@ -94,7 +95,7 @@
         <section class="relative min-h-[90vh] flex items-center overflow-hidden bg-navy">
             <div class="absolute inset-0 z-0">
                 <div class="absolute inset-0 bg-gradient-to-r from-navy via-navy/70 to-transparent z-10"></div>
-                <img alt="Global Business District Night View" class="w-full h-full object-cover opacity-60"
+                <img alt="夜のビジネス街の風景" class="w-full h-full object-cover opacity-60"
                     src="https://lh3.googleusercontent.com/aida-public/AB6AXuCmBQWsAy3tlJG7mtPhx8euTmIBEBFBCEQ6s4_xdVfI4Q8d71z5m-uhsFJjwRulJ84_K6OqE9Dsvm9SIwMLx7J2gTGeIDRP4yEgEYUh7m_VdE1Nx3xDakzkp2WKf8r0FeVznTruLymCwZF130sbwLbUiuqP9zuS82H73Ck8P0sLGNT6VcgEHygm-jLLuqKBmzoqhKZjg08MenwTDRrJbsooBkc7CGM260XwT1h2kdvIlSFHaDRCHM-OYjPJLCNZqX-aXnWbSxSIdYs" />
             </div>
             <div class="relative z-20 max-w-7xl mx-auto px-8 py-24">
@@ -106,7 +107,7 @@
                     </div>
                     <h1 class="text-4xl md:text-6xl font-black text-white leading-tight mb-10 tracking-tight">
                         世界を舞台にするリーダーのための、<br />
-                        <span class="text-accent-gold">最短最速</span>の英語習得メソッド
+                        <span class="text-accent-gold">効率重視</span>の英語習得メソッド
                     </h1>
                     <p class="text-xl md:text-2xl text-slate-200 mb-14 leading-relaxed font-light">
                         会議・交渉・登壇。実戦の場で<br class="hidden md:block" />“言葉に詰まらない”状態をつくる。
@@ -133,7 +134,7 @@
                         </div>
                         <h4 class="text-xl font-bold mb-6 text-navy">圧倒的な時間不足</h4>
                         <p class="text-slate-600 leading-luxury font-light">
-                            週80時間を超える重責の中で、非効率な学習は許されません。最短距離で最高の結果を出す「戦略的アプローチ」を提供します。
+                            週80時間を超える重責の中で、非効率な学習は避けたいものです。目的達成に向けて、効率的に成果を目指す「戦略的アプローチ」を提供します。
                         </p>
                     </div>
                     <div class="group">
@@ -186,7 +187,7 @@
                     </div>
                     <div class="lg:w-1/2 relative">
                         <div class="aspect-[4/5] bg-navy overflow-hidden">
-                            <img alt="Professional Meeting Room"
+                            <img alt="プロフェッショナルな会議室" 
                                 class="w-full h-full object-cover grayscale hover:grayscale-0 transition-all duration-700"
                                 src="https://lh3.googleusercontent.com/aida-public/AB6AXuAMGw5No5M0z4jzJPorLYvkASPy95MNwHdfuDPEIthwqwXw9nx-FBqNwzQcZX2OaUbF976uzXzHoSQ4czdAwUumDqRHIfEP-zbd9feLMdFAZ4Iuy0pILOQcPqA4lrUSBaHgLHjPi1KJE2TipLV8hEhLwcZ9dOW_Z-B4McjNCUR7gcE5MzH9XGXDTep_xivOZa-XTEnZdaHTztiumgGaKjWztZricUiA_Dcb-86AiZO7ivDA8DJReV9siqr_Mr_TNSgs1x0rzrshUhY" />
                         </div>
@@ -209,7 +210,7 @@
                     <div class="border border-white/10 p-12 hover:border-accent-gold transition-colors duration-500">
                         <div class="flex items-center gap-8 mb-10">
                             <div class="size-24 bg-slate-800 overflow-hidden grayscale">
-                                <img alt="CEO Portrait" class="w-full h-full object-cover"
+                                <img alt="受講生イメージ（CEO）" class="w-full h-full object-cover"
                                     src="https://lh3.googleusercontent.com/aida-public/AB6AXuDW4NU2f3LeM1hVYJIiO082HlLwcNgda0zBfxN0f9ttpwl7yvFa1u_ytu1_5_hD8g-swJ0rBuSenPGe_j5Svv-zUSDuDzb6LnpVWbV4-T8OSAPJhNhTLXPQPaiGU1AAAyhdzhTNMHBnjXACXxldSLYeYtghHd3FpZOFY1enh28EDX-A0Kkr2q0efzzaUeBWr19gSIuQybMkDo3We_STE8J8cQbrpJOszgYYNfvypE2Bgc0yklzTPdwEdjd1R8w0LfdomYT5NjQYaMo" />
                             </div>
                             <div>
@@ -225,7 +226,7 @@
                     <div class="border border-white/10 p-12 hover:border-accent-gold transition-colors duration-500">
                         <div class="flex items-center gap-8 mb-10">
                             <div class="size-24 bg-slate-800 overflow-hidden grayscale">
-                                <img alt="Executive Portrait" class="w-full h-full object-cover"
+                                <img alt="受講生イメージ（役員）" class="w-full h-full object-cover"
                                     src="https://lh3.googleusercontent.com/aida-public/AB6AXuDFYk2RK6VX4ieZzQuCe4w7lsckZzFUr--hKPenSh6AhIrBDq_aRBq5Eb8nq-KtCQHTJbIgvliGOijz8fAT7KxwPB61pcYZVhr2U0yqRy2Esu321RT0kFmdI8bq-5QNJZD0y3rx5mFhm6c-5dS6ZnuA9k7J_cS3uMDK4lMsomlm0K-mGzwKfStRpUF6JeSQ2UXDJEtX61KTt6vb2UUtWQu8Sjn7MewsDfBw6d-6UUfWhYYUSSMVa-Mjwpk2d_PrIc0KgL2Cq7DLqVM" />
                             </div>
                             <div>
@@ -249,11 +250,12 @@
                             無料カウンセリング（30分）</h2>
                         <div class="inline-flex items-center gap-3 mb-8">
                             <span class="w-2 h-2 rounded-full bg-accent-gold animate-pulse"></span>
-                            <span class="text-xs font-bold text-navy tracking-[0.2em] uppercase">今月の新規枠：残り3枠</span>
+                            <span class="text-xs font-bold text-navy tracking-[0.2em] uppercase">今月のご案内可能枠（最新状況はお問い合わせください）</span>
                         </div>
                         <p class="text-slate-600 text-lg mb-12 leading-luxury font-light">
-                            会議・交渉で詰まる原因を特定し、最短の改善ルートをその場で整理します。英語学習の相談ではなく、<span
-                                class="text-navy font-bold border-b-2 border-accent-gold">「実戦で困らないための設計」</span>を持ち帰る30分です。
+                            会議・交渉で詰まる原因を特定し、改善ルートをその場で整理します。<br class="hidden md:block" />
+                            英語学習の相談ではなく、<span
+                                class="text-navy font-bold border-b-2 border-accent-gold">「実戦で困りにくくするための設計」</span>を持ち帰る30分です。
                         </p>
                         <div class="mb-16">
                             <h4
@@ -268,7 +270,7 @@
                                 </li>
                                 <li class="flex items-center gap-4 py-4 border-b border-slate-100">
                                     <span class="material-symbols-outlined text-accent-gold text-xl">check</span>
-                                    <span class="text-navy font-medium">最短ルートの提示（何を、どの順でやるか）</span>
+                                    <span class="text-navy font-medium">優先ルートの提示（何を、どの順でやるか）</span>
                                 </li>
                                 <li class="flex items-center gap-4 py-4 border-b border-slate-100">
                                     <span class="material-symbols-outlined text-accent-gold text-xl">check</span>
@@ -354,13 +356,13 @@
                                 </div>
                             </div>
                             <div class="grid grid-cols-7 gap-4 mb-10 text-center">
-                                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Mo</div>
-                                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Tu</div>
-                                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">We</div>
-                                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Th</div>
-                                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">Fr</div>
-                                <div class="text-[10px] font-bold text-navy/40 uppercase tracking-widest">Sa</div>
-                                <div class="text-[10px] font-bold text-navy/40 uppercase tracking-widest">Su</div>
+                                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">月</div>
+                                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">火</div>
+                                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">水</div>
+                                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">木</div>
+                                <div class="text-[10px] font-bold text-slate-400 uppercase tracking-widest">金</div>
+                                <div class="text-[10px] font-bold text-navy/40 uppercase tracking-widest">土</div>
+                                <div class="text-[10px] font-bold text-navy/40 uppercase tracking-widest">日</div>
                                 <div class="p-3 text-xs text-slate-300">28</div>
                                 <div class="p-3 text-xs text-slate-300">29</div>
                                 <div class="p-3 text-xs text-slate-300">30</div>
@@ -443,12 +445,12 @@
                     <div class="bg-white border border-slate-100 p-8 shadow-sm">
                         <button class="flex items-center justify-between w-full text-left group faq-btn">
                             <span
-                                class="text-lg font-bold text-navy group-hover:text-accent-gold transition-colors">返金保証制度はありますか？</span>
+                                class="text-lg font-bold text-navy group-hover:text-accent-gold transition-colors">返金制度はありますか？</span>
                             <span
                                 class="material-symbols-outlined text-navy/30 transition-transform duration-300">add</span>
                         </button>
                         <div class="mt-6 text-slate-500 font-light leading-luxury faq-content hidden">
-                            「成果にコミットする」という方針のもと、万が一メソッドにご満足いただけない場合は、開始30日以内であれば全額返金保証をご用意しております。安心してご参加ください。
+                            万が一メソッドにご満足いただけない場合は、開始30日以内を目安に返金対応を行っています。適用条件と手続きは事前にご案内します。
                         </div>
                     </div>
                     <div class="bg-white border border-slate-100 p-8 shadow-sm">
@@ -459,7 +461,7 @@
                                 class="material-symbols-outlined text-navy/30 transition-transform duration-300">add</span>
                         </button>
                         <div class="mt-6 text-slate-500 font-light leading-luxury faq-content hidden">
-                            はい。当コーチングは「決まった時間にスクールに通う」必要はありません。24時間いつでもチャットで質問可能、早朝・深夜の学習もサポートします。忙しい経営者のライフスタイルに完全に寄り添います。
+                            はい。当コーチングは「決まった時間にスクールに通う」必要はありません。チャットで質問でき、早朝・深夜帯の学習にも可能な範囲で対応します。忙しい経営者のライフスタイルに合わせてサポートします。
                         </div>
                     </div>
                     <div class="bg-white border border-slate-100 p-8 shadow-sm">
@@ -470,7 +472,7 @@
                                 class="material-symbols-outlined text-navy/30 transition-transform duration-300">add</span>
                         </button>
                         <div class="mt-6 text-slate-500 font-light leading-luxury faq-content hidden">
-                            当サービスは画一的なカリキュラムではなく、あなたの「直近のゴール（例：来月の投資家プレゼン成功）」にフルコミットするためです。必要な期間とリソースを最適化し、無駄なコストを省いたプランをご提示します。
+                            当サービスは画一的なカリキュラムではなく、あなたの「直近のゴール（例：来月の投資家プレゼン）」に合わせて設計するためです。必要な期間とリソースを最適化し、無駄なコストを抑えたプランをご提示します。
                         </div>
                     </div>
                 </div>
@@ -490,17 +492,17 @@
                         </div>
                     </div>
                     <p class="text-slate-400 max-w-sm mb-10 font-light leading-luxury">
-                        世界で戦う日本人のための、最高峰の英語コーチングサービス。次世代のグローバルリーダーを育成します。
+                        世界で戦う日本人のための、ハイレベルな英語コーチングサービス。次世代のグローバルリーダー育成を支援します。
                     </p>
                     <div class="flex gap-6">
-                        <a class="text-white/40 hover:text-accent-gold transition-colors" href="#">
+                        <a class="text-white/40 hover:text-accent-gold transition-colors" href="#contact" aria-label="お問い合わせへ移動">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
                                 <path
                                     d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z">
                                 </path>
                             </svg>
                         </a>
-                        <a class="text-white/40 hover:text-accent-gold transition-colors" href="#">
+                        <a class="text-white/40 hover:text-accent-gold transition-colors" href="#faq" aria-label="FAQへ移動">
                             <svg class="w-6 h-6 fill-current" viewBox="0 0 24 24">
                                 <path
                                     d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z">
@@ -512,19 +514,19 @@
                 <div>
                     <h5 class="text-sm font-bold tracking-widest text-accent-gold uppercase mb-8">Service</h5>
                     <ul class="space-y-4 text-slate-400 text-sm font-light">
-                        <li><a class="hover:text-white transition-colors" href="#">Methodology</a></li>
-                        <li><a class="hover:text-white transition-colors" href="#">Course &amp; Pricing</a></li>
-                        <li><a class="hover:text-white transition-colors" href="#">Case Studies</a></li>
-                        <li><a class="hover:text-white transition-colors" href="#">Executive Coaches</a></li>
+                        <li><a class="hover:text-white transition-colors" href="#method">Methodology</a></li>
+                        <li><a class="hover:text-white transition-colors" href="#contact">Course &amp; Pricing</a></li>
+                        <li><a class="hover:text-white transition-colors" href="#testimonials">Case Studies</a></li>
+                        <li><a class="hover:text-white transition-colors" href="#method">Executive Coaches</a></li>
                     </ul>
                 </div>
                 <div>
                     <h5 class="text-sm font-bold tracking-widest text-accent-gold uppercase mb-8">Support</h5>
                     <ul class="space-y-4 text-slate-400 text-sm font-light">
-                        <li><a class="hover:text-white transition-colors" href="#">Consultation</a></li>
-                        <li><a class="hover:text-white transition-colors" href="#">Help Center</a></li>
-                        <li><a class="hover:text-white transition-colors" href="#">Privacy Policy</a></li>
-                        <li><a class="hover:text-white transition-colors" href="#">Company Profile</a></li>
+                        <li><a class="hover:text-white transition-colors" href="#contact">Consultation</a></li>
+                        <li><a class="hover:text-white transition-colors" href="#faq">Help Center</a></li>
+                        <li><a class="hover:text-white transition-colors" href="#legal-note">Privacy Policy</a></li>
+                        <li><a class="hover:text-white transition-colors" href="#legal-note">Company Profile</a></li>
                     </ul>
                 </div>
             </div>
@@ -532,9 +534,12 @@
                 class="pt-12 border-t border-white/5 flex flex-col md:flex-row justify-between items-center gap-8 text-white/20 text-xs font-bold tracking-widest">
                 <p>© 2024 EXECUTIVE ENGLISH COACHING. ALL RIGHTS RESERVED.</p>
                 <div class="flex gap-12 uppercase">
-                    <a class="hover:text-white transition-colors" href="#">Legal Notice</a>
-                    <a class="hover:text-white transition-colors" href="#">Terms of Use</a>
+                    <a class="hover:text-white transition-colors" href="#legal-note">Legal Notice</a>
+                    <a class="hover:text-white transition-colors" href="#legal-note">Terms of Use</a>
                 </div>
+            </div>
+            <div id="legal-note" class="mt-8 text-white/50 text-xs leading-relaxed">
+                Privacy Policy・Company Profile・Terms of Use は現在整備中です。公開後、正式ページへ更新します。
             </div>
         </div>
     </footer>
